--- a/Aplicacion/Vista/componentes/login.phtml
+++ b/Aplicacion/Vista/componentes/login.phtml
@@ -29,14 +29,14 @@
           <section class="login_content">
             <form>
               <h1>Iniciar Sesión</h1>
-              <div>
-                <input type="text" class="form-control" placeholder="Usuario" required="" />
+              <div class="div-retail">
+                <input type="text" id="usuario" class="form-control" placeholder="Usuario" required="" />
+              </div>
+              <div class="div-retail">
+                <input type="password" id="contrasena" class="form-control" placeholder="Contraseña" required="" />
               </div>
               <div>
-                <input type="password" class="form-control" placeholder="Contraseña" required="" />
-              </div>
-              <div>
-                <a class="btn btn-default submit" href="../">Ingresar</a>
+                <a class="btn btn-default submit" href="#" id="login-ingresar">Ingresar</a>
                 <a class="reset_pass" href="#">¿Olvidó su contraseña?</a>
               </div>
 
@@ -94,6 +94,8 @@
       </div>
     </div>
 
+    <script src="../Static/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="../Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../Static/js/login.js"></script>
 
   </body>
