--- a/Aplicacion/Vista/contenedor.phtml
+++ b/Aplicacion/Vista/contenedor.phtml
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<base href="https://www.retailcs.com/" />-->
+    <base href="http://www.retailcs.com/"/>
 
     <title>Retail Custom Solutions</title>
 
-    <link href="./Static/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./Static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="./Static/build/css/custom.min.css" rel="stylesheet">
-    <link href="./Static/css/retailcs.css" rel="stylesheet">
+    <link href="./extranet/Static/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./extranet/Static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./extranet/Static/build/css/custom.min.css" rel="stylesheet">
+    <link href="./extranet/Static/css/retailcs.css" rel="stylesheet">
 
   </head>
 
@@ -23,7 +23,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title">
-              <a href="./" class="site_title"><img src="./Static/images/logo-small-name.png" alt=""></a>
+              <a href="./" class="site_title"><img src="./extranet/Static/images/logo-small-name.png" alt=""></a>
             </div>
 
             <div class="clearfix"></div>
@@ -36,27 +36,27 @@
                 <ul class="nav side-menu">
                   <li class="active">
                     <a><i class="fa fa-home"></i> RMS.NET <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="index.html">Actualizaciones</a></li>
-                      <li><a href="#">Correcciones</a></li>
-                      <li><a href="#">Manuales</a></li>
-                      <li><a href="#">Videos</a></li>
+                    <ul class="nav child_menu" style="display: block;">
+                      <li><a href="#" class="net-servicio" page="actualizacion" ser="rms">Actualizaciones</a></li>
+                      <li><a href="#" class="net-servicio" page="correcion" ser="rms">Correcciones</a></li>
+                      <li><a href="#" class="net-servicio" page="manual" ser="rms">Manuales</a></li>
+                      <li><a href="#" class="net-servicio" page="video" ser="rms">Videos</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-edit"></i> POS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="#">Actualizaciones</a></li>
-                      <li><a href="#">Correcciones</a></li>
-                      <li><a href="#">Manuales</a></li>
-                      <li><a href="#">Videos</a></li>
+                      <li><a href="#" class="net-servicio" page="actualizacion" ser="pos">Actualizaciones</a></li>
+                      <li><a href="#" class="net-servicio" page="correcion" ser="pos">Correcciones</a></li>
+                      <li><a href="#" class="net-servicio" page="manual" ser="pos">Manuales</a></li>
+                      <li><a href="#" class="net-servicio" page="video" ser="pos">Videos</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-desktop"></i> WMS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="#">Actualizaciones</a></li>
-                      <li><a href="#">Correcciones</a></li>
-                      <li><a href="#">Manuales</a></li>
-                      <li><a href="#">Videos</a></li>
+                      <li><a href="#" class="net-servicio" page="actualizacion" ser="wms">Actualizaciones</a></li>
+                      <li><a href="#" class="net-servicio" page="correcion" ser="wms">Correcciones</a></li>
+                      <li><a href="#" class="net-servicio" page="manual" ser="wms">Manuales</a></li>
+                      <li><a href="#" class="net-servicio" page="video" ser="wms">Videos</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -66,11 +66,10 @@
                 <ul class="nav side-menu">
                   <li><a><i class="fa fa-bug"></i> Redes Sociales <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="#">E-commerce</a></li>
-                      <li><a href="#">Projects</a></li>
-                      <li><a href="#">Project Detail</a></li>
-                      <li><a href="#">Contacts</a></li>
-                      <li><a href="#">Profile</a></li>
+                      <li><a href="#">Facebook</a></li>
+                      <li><a href="#">Twitter</a></li>
+                      <li><a href="#">Instagram</a></li>
+                      <li><a href="#">Youtube</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -90,7 +89,7 @@
               <a data-toggle="tooltip" data-placement="top" title="Lock">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="Logout" href="./login/">
+              <a data-toggle="tooltip" data-placement="top" title="Logout" href="./extranet/login/cerrarSession/">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
@@ -126,7 +125,7 @@
                     </li>
                     -->
                     <li><a href="javascript:;">Ayuda</a></li>
-                    <li><a href="./login/"><i class="fa fa-sign-out pull-right"></i> Cerrar Sesión</a></li>
+                    <li><a href="./extranet/login/cerrarSession/"><i class="fa fa-sign-out pull-right"></i> Cerrar Sesión</a></li>
                   </ul>
                 </li>
 
@@ -193,10 +192,10 @@
       </div>
     </div>
 
-    <script src="./Static/vendors/jquery/dist/jquery.min.js"></script>
-    <script src="./Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./Static/build/js/custom.min.js"></script>
-    <script src="./Static/js/retailcs.js"></script>
+    <script src="./extranet/Static/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="./extranet/Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./extranet/Static/build/js/custom.min.js"></script>
+    <script src="./extranet/Static/js/retailcs.js"></script>
   
   </body>
 </html>
