--- a/Static/css/login.css
+++ b/Static/css/login.css
@@ -2,3 +2,35 @@
 .login .login_wrapper .separator {
 	margin-top: 200px;
 }
+
+.login .login_wrapper .div-retail .error{
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    border-radius: 4px 4px 4px 4px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding: 6px 12px;
+    position: absolute;
+    font-size: 15px;
+    z-index: 15;
+    top: 30px;
+    left: 10px;
+}
+
+.login .login_wrapper .div-retail .error:before{
+    border-color: transparent transparent #f2dede transparent;
+    border-style: solid;
+    border-width: 6px 8px;
+    content: "";
+    display: block;
+    height: 0px;
+    left: 10px;
+    position: absolute;
+    top: -12px;
+    width: 0;
+}
+
+.login .login_wrapper .div-retail {
+	position: relative;
+}
