Fcabezasr - Changes 2 - Extranet
Las vistas: Actualización, Corrección y Manual, ya están implementadas a
nivel FrontEnd y parte del BackEnd. :)

--- a/Aplicacion/Vista/componentes/index.phtml
+++ b/Aplicacion/Vista/componentes/index.phtml
@@ -1,1 +1,20 @@
-Hola Retail Custom Solutions!!
+<style>
+.vjs-tech {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+}	
+</style>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+
+			<video class="vjs-tech" loop="" autoplay="" poster="">
+            	<source src="http://www.retailcs.com/es/public/img/cloud.mp4" type="video/mp4">
+        	</video>
+
+		</div>
+	</div>
+</div>
