--- a/Aplicacion/Vista/contenedor.phtml
+++ b/Aplicacion/Vista/contenedor.phtml
@@ -15,6 +15,9 @@
     <link href="./extranet/Static/build/css/custom.min.css" rel="stylesheet">
     <link href="./extranet/Static/css/retailcs.css" rel="stylesheet">
 
+    <script src="./extranet/Static/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="./extranet/Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    
   </head>
 
   <body class="nav-md">
@@ -23,7 +26,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title">
-              <a href="./" class="site_title"><img src="./extranet/Static/images/logo-small-name.png" alt=""></a>
+              <a href="./extranet/" class="site_title"><img src="./extranet/Static/images/logo-small-name.png" alt=""></a>
             </div>
 
             <div class="clearfix"></div>
@@ -38,7 +41,7 @@
                     <a><i class="fa fa-home"></i> RMS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: block;">
                       <li><a href="#" class="net-servicio" page="actualizacion" ser="rms">Actualizaciones</a></li>
-                      <li><a href="#" class="net-servicio" page="correcion" ser="rms">Correcciones</a></li>
+                      <li><a href="#" class="net-servicio" page="correccion" ser="rms">Correcciones</a></li>
                       <li><a href="#" class="net-servicio" page="manual" ser="rms">Manuales</a></li>
                       <li><a href="#" class="net-servicio" page="video" ser="rms">Videos</a></li>
                     </ul>
@@ -46,7 +49,7 @@
                   <li><a><i class="fa fa-edit"></i> POS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="#" class="net-servicio" page="actualizacion" ser="pos">Actualizaciones</a></li>
-                      <li><a href="#" class="net-servicio" page="correcion" ser="pos">Correcciones</a></li>
+                      <li><a href="#" class="net-servicio" page="correccion" ser="pos">Correcciones</a></li>
                       <li><a href="#" class="net-servicio" page="manual" ser="pos">Manuales</a></li>
                       <li><a href="#" class="net-servicio" page="video" ser="pos">Videos</a></li>
                     </ul>
@@ -54,9 +57,17 @@
                   <li><a><i class="fa fa-desktop"></i> WMS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="#" class="net-servicio" page="actualizacion" ser="wms">Actualizaciones</a></li>
-                      <li><a href="#" class="net-servicio" page="correcion" ser="wms">Correcciones</a></li>
+                      <li><a href="#" class="net-servicio" page="correccion" ser="wms">Correcciones</a></li>
                       <li><a href="#" class="net-servicio" page="manual" ser="wms">Manuales</a></li>
                       <li><a href="#" class="net-servicio" page="video" ser="wms">Videos</a></li>
+                    </ul>
+                  </li>
+                  <li><a><i class="fa fa-bug"></i> POLLING <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="#" class="net-servicio" page="actualizacion" ser="polling">Actualizaciones</a></li>
+                      <li><a href="#" class="net-servicio" page="correccion" ser="polling">Correcciones</a></li>
+                      <li><a href="#" class="net-servicio" page="manual" ser="polling">Manuales</a></li>
+                      <li><a href="#" class="net-servicio" page="video" ser="polling">Videos</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -137,7 +148,7 @@
                   <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                     <li>
                       <a>
-                        <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="https://colorlib.com/polygon/gentelella/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -149,7 +160,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="https://colorlib.com/polygon/gentelella/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -190,12 +201,10 @@
         </footer>
         <!-- /footer content -->
       </div>
-    </div>
+    </div> 
 
-    <script src="./extranet/Static/vendors/jquery/dist/jquery.min.js"></script>
-    <script src="./extranet/Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./extranet/Static/build/js/custom.min.js"></script>
     <script src="./extranet/Static/js/retailcs.js"></script>
-  
+
   </body>
 </html>
