--- a/Static/css/login.css
+++ b/Static/css/login.css
@@ -1,24 +1,130 @@
-
+.login{
+    background-image: url(../images/bg.jpg);
+    background-size: cover;
+}
+.login_wrapper{
+    margin: 0 auto;
+    max-width: 480px;
+}
+.login_content{
+    padding: 0;
+}
+.login_content form{
+    margin: 0;
+}
+.flex-container {
+    height: 900px;
+    overflow: hidden;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+}
+.flex-item {
+    height: 80px; /*whatever*/
+    width: 100%;
+    margin: auto;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    flex-grow: 1;
+}
+.form-item{
+    flex-grow: 2;
+}
+.form{
+    width: 100%;
+    padding: 35px 50px 15px;
+    background-color: #ffffff;
+    border-radius: 6px;
+}
+.form-group{
+    position: relative;
+}
+.login_content form input[type=text], .login_content form input[type=email], .login_content form input[type=password]{
+    border: none;
+    box-shadow: none;
+    border-radius: 0;
+    border-bottom: 1px solid #cccccc;
+}
+.login_content form input[type=text]:focus, .login_content form input[type=email]:focus, .login_content form input[type=password]:focus{
+    border: none;
+    box-shadow: none;
+    border-radius: 0;
+    border-bottom: 1px solid #ddd;
+}
+.btn{
+    padding: 14px 20px;
+    border-radius: 5px;
+    text-shadow: none;
+    height: 50px;
+    color: #ffffff;
+    transition: all 0.1s;
+    -webkit-transition: all 0.1s;
+    -moz-transition: all 0.1s;
+}
+.btn-default{
+    border-color: #2c3e4f;
+    background-color: #2c3e4f;
+}
+.btn-default:hover{
+    border-color: #3d566e;
+    background-color: #3d566e;
+    color: #ffffff;
+}
+.btn-default:focus,.btn-default:active{
+    border-color: #3d566e !important;
+    background-color: #3d566e !important;
+    box-shadow: none;
+    color: #ffffff !important;
+    transform: translateY(3px);
+    -webkit-transform: translateY(3px);
+    -moz-transform: translateY(3px);
+}
+.form-group .btn{
+    margin-top: 40px;
+    margin-bottom: 24px;
+}
 .login .login_wrapper .separator {
 	margin-top: 200px;
 }
 
-.login .login_wrapper .div-retail .error{
+.login .login_wrapper .form-group .error{
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
-    border-radius: 4px 4px 4px 4px;
+    border-radius: 3px;
     margin-right: 0px;
     margin-top: 0px;
-    padding: 6px 12px;
+    padding: 3px 12px;
     position: absolute;
-    font-size: 15px;
+    font-size: 12px;
     z-index: 15;
     top: 30px;
     left: 10px;
 }
 
-.login .login_wrapper .div-retail .error:before{
+.login .login_wrapper .form-group .error:before{
     border-color: transparent transparent #f2dede transparent;
     border-style: solid;
     border-width: 6px 8px;
@@ -31,6 +137,17 @@
     width: 0;
 }
 
-.login .login_wrapper .div-retail {
+.login .login_wrapper .form-group {
 	position: relative;
+}
+.login_content div .reset_pass{
+    float: none;
+    margin: 0;
+}
+.author {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
