Fcabezasr - Changes 4 - Extranet
Se implemento la parte de los Videos... :)

--- a/Aplicacion/Vista/componentes/video.phtml
+++ b/Aplicacion/Vista/componentes/video.phtml
@@ -11,4 +11,185 @@
 			</blockquote>
 		</div>
 	</div>
+
+	<div class="clearfix"></div>
+
+	<div class="row">
+		<div class="col-md-12 col-sm-12 col-xs-12">
+		
+			<!-- Inicio - Table Collapse 1 -->
+			<div class="x_panel">
+				<div class="x_title">
+					<h2>&nbsp;<small>&nbsp;</small></h2>
+					<ul class="nav navbar-right panel_toolbox">
+						<!--
+						<li><a class="collapse-list"><i class="glyphicon glyphicon-th-list"></i> Ver Modo Lista</a></li>
+						<li><a class="collapse-grilla"><i class="glyphicon glyphicon-th"></i> Ver Modo Grilla</a></li>
+						-->
+					</ul>
+					<div class="clearfix"></div>
+				</div>
+
+				<div class="x_content">
+					<div class="row">
+
+						<!-- Inicio - Grilla -->
+
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong>Instalación del sistema RMS.NET</strong></p>
+									<p>Subido el viernes 10, 2017</p>
+								</div>
+                          		<div class="image view view-first">
+                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1Twt0oMiX_Y?ecver=1" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+	                                		<!--<a href="#"><i class="fa fa-link"></i></a>
+	                                		<a href="#"><i class="fa fa-pencil"></i></a>
+	                                		<a href="#"><i class="fa fa-times"></i></a>-->
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong>Beneficios de instalar nuestro sistema RMS.NET</strong></p>
+									<p>Subido el viernes 10, 2017</p>
+								</div>
+                          		<div class="image view view-first">
+                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1tJeo6Rla8E" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong>Instalación del sistema RMS.NET</strong></p>
+									<p>Subido el viernes 10, 2017</p>
+								</div>
+                          		<div class="image view view-first">
+                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1Twt0oMiX_Y?ecver=1" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong>Beneficios de instalar nuestro sistema RMS.NET</strong></p>
+									<p>Subido el viernes 10, 2017</p>
+								</div>
+                          		<div class="image view view-first">
+                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1tJeo6Rla8E" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong>Instalación del sistema RMS.NET</strong></p>
+									<p>Subido el viernes 10, 2017</p>
+								</div>
+                          		<div class="image view view-first">
+                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1Twt0oMiX_Y?ecver=1" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong>Beneficios de instalar nuestro sistema RMS.NET</strong></p>
+									<p>Subido el viernes 10, 2017</p>
+								</div>
+                          		<div class="image view view-first">
+                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1tJeo6Rla8E" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong>Instalación del sistema RMS.NET</strong></p>
+									<p>Subido el viernes 10, 2017</p>
+								</div>
+                          		<div class="image view view-first">
+                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1Twt0oMiX_Y?ecver=1" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong>Beneficios de instalar nuestro sistema RMS.NET</strong></p>
+									<p>Subido el viernes 10, 2017</p>
+								</div>
+                          		<div class="image view view-first">
+                          			<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1tJeo6Rla8E" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+
+						<!-- Fin - Grilla -->
+
+						<!-- Inicio - Modal video -->
+						<div class="modal fade" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">						  	
+						  	<div class="modal-dialog" role="document">
+						  		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						  		<iframe id="modal-iframe" width="100%" height="350px" src="" frameborder="0" allowfullscreen></iframe>						  		
+						  	</div>
+						</div>
+						<!-- Fin - Modal video -->
+					
+					</div>
+				</div>
+			</div>
+		</div>	
+	</div>
+	<div class="clearfix"></div>
+
 </div>
