--- a/Aplicacion/Vista/componentes/manual.phtml
+++ b/Aplicacion/Vista/componentes/manual.phtml
@@ -44,7 +44,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>								
 								</div>
@@ -62,7 +62,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -80,7 +80,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -98,7 +98,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -116,7 +116,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -134,7 +134,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -152,7 +152,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -170,7 +170,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -188,7 +188,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -206,7 +206,7 @@
 										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
 									</div>
 									<div class="caption-right">
-										<p><a href="javascript:void(0)" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>
 								</div>
