--- a/Static/css/login.css
+++ b/Static/css/login.css
@@ -1,5 +1,10 @@
-.login{
+html{
+    width: 100%;
+    height: 100%;
     background-image: url(../images/bg.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -ms-background-size: cover;
     background-size: cover;
 }
 .login_wrapper{
@@ -73,34 +78,7 @@
     border-radius: 0;
     border-bottom: 1px solid #ddd;
 }
-.btn{
-    padding: 14px 20px;
-    border-radius: 5px;
-    text-shadow: none;
-    height: 50px;
-    color: #ffffff;
-    transition: all 0.1s;
-    -webkit-transition: all 0.1s;
-    -moz-transition: all 0.1s;
-}
-.btn-default{
-    border-color: #2c3e4f;
-    background-color: #2c3e4f;
-}
-.btn-default:hover{
-    border-color: #3d566e;
-    background-color: #3d566e;
-    color: #ffffff;
-}
-.btn-default:focus,.btn-default:active{
-    border-color: #3d566e !important;
-    background-color: #3d566e !important;
-    box-shadow: none;
-    color: #ffffff !important;
-    transform: translateY(3px);
-    -webkit-transform: translateY(3px);
-    -moz-transform: translateY(3px);
-}
+
 .form-group .btn{
     margin-top: 40px;
     margin-bottom: 24px;
@@ -144,10 +122,27 @@
     float: none;
     margin: 0;
 }
+.form-control-feedback{
+    cursor: pointer;
+    pointer-events: initial;
+}
 .author {
     position: absolute;
-    bottom: 0;
+    bottom: 15px;
     left: 0;
     right: 0;
     margin: auto;
+}
+.author h5{
+    color: #ffffff;
+}
+.btn_link{
+    margin-top: 0 !important;
+    padding: 4px;
+    height: 30px;
+    color: #73879C;
+    margin-bottom: 0 !important;
+}
+.btn_link:active,.btn_link:focus{
+    box-shadow: none;
 }
