--- a/Aplicacion/Vista/componentes/manual.phtml
+++ b/Aplicacion/Vista/componentes/manual.phtml
@@ -36,7 +36,7 @@
 						<div class="col-md-55">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -54,7 +54,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -72,7 +72,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -90,7 +90,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -108,7 +108,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -126,7 +126,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -144,7 +144,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -162,7 +162,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -180,7 +180,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
@@ -198,7 +198,7 @@
 						<div class="col-md-55 col-md-55-list">
 							<div class="thumbnail">
 								<div class="image view view-list">
-									<img class="img-manual" src="./extranet/Static/images/pdf-icon.png" alt="image" />
+									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
 								</div>
 								<div class="caption">
 									<div class="caption-left">
