--- a/Aplicacion/Vista/contenedor.phtml
+++ b/Aplicacion/Vista/contenedor.phtml
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="http://www.retailcs.com/"/>
+    <base href="http://www.retailcs.com/extranet/"/>
 
     <title>Retail Custom Solutions</title>
 
-    <link href="./extranet/Static/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./extranet/Static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="./extranet/Static/build/css/custom.min.css" rel="stylesheet">
-    <link href="./extranet/Static/css/retailcs.css" rel="stylesheet">
+    <link href="./Static/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./Static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./Static/build/css/custom.min.css" rel="stylesheet">
+    <link href="./Static/css/retailcs.css" rel="stylesheet">
 
-    <script src="./extranet/Static/vendors/jquery/dist/jquery.min.js"></script>
-    <script src="./extranet/Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./Static/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="./Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     
   </head>
 
@@ -26,7 +26,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title">
-              <a href="./extranet/" class="site_title"><img src="./extranet/Static/images/logo-small-name.png" alt=""></a>
+              <a href="./" class="site_title"><img src="./Static/images/logo-small-name.png" alt=""></a>
             </div>
 
             <div class="clearfix"></div>
@@ -56,10 +56,10 @@
                   </li>
                   <li><a><i class="fa fa-desktop"></i> WMS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="#" class="net-servicio" page="actualizacion" ser="wms">Actualizaciones</a></li>
-                      <li><a href="#" class="net-servicio" page="correccion" ser="wms">Correcciones</a></li>
-                      <li><a href="#" class="net-servicio" page="manual" ser="wms">Manuales</a></li>
-                      <li><a href="#" class="net-servicio" page="video" ser="wms">Videos</a></li>
+                      <li><a href="javascript:void(0)" class="net-servicio" page="actualizacion" ser="wms">Actualizaciones</a></li>
+                      <li><a href="javascript:void(0)" class="net-servicio" page="correccion" ser="wms">Correcciones</a></li>
+                      <li><a href="javascript:void(0)" class="net-servicio" page="manual" ser="wms">Manuales</a></li>
+                      <li><a href="javascript:void(0)" class="net-servicio" page="video" ser="wms">Videos</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-bug"></i> POLLING <span class="fa fa-chevron-down"></span></a>
@@ -78,10 +78,10 @@
                 <ul class="nav side-menu">
                   <li><a><i class="fa fa-bug"></i> Redes Sociales <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="javascript:void(0)">Facebook</a></li>
-                      <li><a href="javascript:void(0)">Twitter</a></li>
-                      <li><a href="javascript:void(0)">Instagram</a></li>
-                      <li><a href="javascript:void(0)">Youtube</a></li>
+                      <li><a href="javascript:void(0)" class="redes-sociales">Facebook</a></li>
+                      <li><a href="javascript:void(0)" class="redes-sociales">Twitter</a></li>
+                      <li><a href="javascript:void(0)" class="redes-sociales">Instagram</a></li>
+                      <li><a href="javascript:void(0)" class="redes-sociales">Youtube</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -93,8 +93,8 @@
                 <ul class="nav side-menu">
                   <li><a><i class="fa fa-bug"></i> Gestión Usuarios <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="javascript:void(0)">Nuevo Usuario</a></li>
-                      <li><a href="javascript:void(0)">Lista Usuarios</a></li>
+                      <li><a href="javascript:void(0)" class="gestion-admin">Nuevo Usuario</a></li>
+                      <li><a href="javascript:void(0)" class="gestion-admin">Lista Usuarios</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -115,7 +115,7 @@
               <a data-toggle="tooltip" data-placement="top" title="Lock">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="Logout" href="./extranet/login/cerrarSession/">
+              <a data-toggle="tooltip" data-placement="top" title="Logout" href="./login/cerrarSession/">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
@@ -151,7 +151,7 @@
                     </li>
                     -->
                     <li><a href="javascript:void(0)">Ayuda</a></li>
-                    <li><a href="./extranet/login/cerrarSession/"><i class="fa fa-sign-out pull-right"></i> Cerrar Sesión</a></li>
+                    <li><a href="./login/cerrarSession/"><i class="fa fa-sign-out pull-right"></i> Cerrar Sesión</a></li>
                   </ul>
                 </li>
 
@@ -218,8 +218,8 @@
       </div>
     </div> 
 
-    <script src="./extranet/Static/build/js/custom.min.js"></script>
-    <script src="./extranet/Static/js/retailcs.js"></script>
+    <script src="./Static/build/js/custom.min.js"></script>
+    <script src="./Static/js/retailcs.js"></script>
 
   </body>
 </html>
