--- a/Aplicacion/Vista/componentes/login.phtml
+++ b/Aplicacion/Vista/componentes/login.phtml
@@ -15,8 +15,8 @@
     <link href="../Static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <!-- <link href="../Static/build/css/custom.min.css" rel="stylesheet"> -->
-    <link href="../Static/build/css/custom.css" rel="stylesheet">
+    <link href="../Static/build/css/custom.min.css" rel="stylesheet">
+    <!-- <link href="../Static/build/css/custom.css" rel="stylesheet"> -->
     <link href="../Static/css/login.css" rel="stylesheet">
   </head>
 
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group">
                   <input type="password" id="contrasena" class="form-control" placeholder="Contraseña" required="" />
-                  <span class="glyphicon glyphicon-eye-open form-control-feedback showpassword" aria-hidden="true"></span>
+                  <span class="icon icon-eye form-control-feedback showpassword" aria-hidden="true"></span>
                 </div>
                 <div class="form-group">
                   <btn class="btn btn-block btn-default submit" id="login-ingresar">Ingresar</btn>
