--- a/Static/css/login.css
+++ b/Static/css/login.css
@@ -1,11 +1,55 @@
+@font-face {
+    font-family: 'Lato-Black';
+    src: url('../fonts/Lato/Lato-Black.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-BlackItalic';
+    src: url('../fonts/Lato/Lato-BlackItalic.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-Bold';
+    src: url('../fonts/Lato/Lato-Bold.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-BoldItalic';
+    src: url('../fonts/Lato/Lato-BoldItalic.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-Hairline';
+    src: url('../fonts/Lato/Lato-Hairline.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-HairlineItalic';
+    src: url('../fonts/Lato/Lato-HairlineItalic.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-Italic';
+    src: url('../fonts/Lato/Lato-Italic.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-Light';
+    src: url('../fonts/Lato/Lato-Light.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-LightItalic';
+    src: url('../fonts/Lato/Lato-LightItalic.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-Regular';
+    src: url('../fonts/Lato/Lato-Regular.ttf') format('truetype');
+}
 html{
     width: 100%;
     height: 100%;
+    font-family: 'Lato-Regular';
     background-image: url(../images/bg.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
     background-size: cover;
+}
+body{
+    font-family: 'Lato-Regular';
 }
 .login_wrapper{
     margin: 0 auto;
@@ -101,7 +145,17 @@ html{
     top: 30px;
     left: 10px;
 }
-
+.error-validate{
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    border-radius: 3px;
+    margin: 20px auto;
+    margin-top: 0px;
+    padding: 3px 12px;
+    font-size: 12px;
+    text-align: center;
+}
 .login .login_wrapper .form-group .error:before{
     border-color: transparent transparent #f2dede transparent;
     border-style: solid;
@@ -121,6 +175,7 @@ html{
 .login_content div .reset_pass{
     float: none;
     margin: 0;
+    font-family: 'Lato-Regular';
 }
 .form-control-feedback{
     cursor: pointer;
@@ -136,6 +191,37 @@ html{
 .author h5{
     color: #ffffff;
 }
+.btn{
+    padding: 14px 20px;
+    border-radius: 5px;
+    text-shadow: none;
+    height: 50px;
+    font-family: 'Lato-Bold';
+    letter-spacing: 0.5px;
+    font-size: 16px;
+    color: #ffffff;
+    transition: all 0.1s;
+    -webkit-transition: all 0.1s;
+    -moz-transition: all 0.1s;
+}
+.btn-default{
+    border-color: #2c3e4f;
+    background-color: #2c3e4f;
+}
+.btn-default:hover{
+    border-color: #3d566e;
+    background-color: #3d566e;
+    color: #ffffff;
+}
+.btn-default:focus,.btn-default:active{
+    border-color: #3d566e !important;
+    background-color: #3d566e !important;
+    box-shadow: none;
+    color: #ffffff !important;
+    -webkit-transform: translateY(3px);
+    -moz-transform: translateY(3px);
+    transform: translateY(3px);    
+}
 .btn_link{
     margin-top: 0 !important;
     padding: 4px;
@@ -145,4 +231,32 @@ html{
 }
 .btn_link:active,.btn_link:focus{
     box-shadow: none;
+}
+
+.icon{
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.icon-eye{
+    background-image: url('../images/icon-eye.png');
+    transition: all 0.2s;
+}
+.icon-eye:hover{
+    background-image: url('../images/icon-eye-hover.png');
+}
+.form-group:after {
+    content: '';
+    position: absolute;
+    width: 0px;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: transparent;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.form-group.focus:after {
+    width: 100%;
+    background-color: #3d566e;
 }
