--- a/Aplicacion/Vista/componentes/login.phtml
+++ b/Aplicacion/Vista/componentes/login.phtml
@@ -25,7 +25,7 @@
     <a class="hiddenanchor" id="signin"></a>
 
     <div class="login_wrapper">
-      <div class="animate login_form">
+      <div class="login_form">
         <section class="login_content">
           <form class="flex-container">
             <section class="flex-item">
