--- a/Aplicacion/Vista/componentes/login.phtml
+++ b/Aplicacion/Vista/componentes/login.phtml
@@ -58,7 +58,7 @@
                   <btn class="btn btn-block btn-default submit"id="recovery-enviar">Enviar</btn>
                 </div>
                 <div class="form-group">
-                  <btn class="btn btn_link login_enter">Logearse</btn>
+                  <btn class="btn btn_link login_enter">Iniciar sesión</btn>
                 </div>
               </div>
               <!--/ recovery section end-->
