--- a/Aplicacion/Vista/componentes/index.phtml
+++ b/Aplicacion/Vista/componentes/index.phtml
@@ -10,10 +10,13 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-
+            
+            Hello Retail Custom Solutions! :D
+            <!--
 			<video class="vjs-tech" loop="" autoplay="" poster="">
             	<source src="http://www.retailcs.com/es/public/img/cloud.mp4" type="video/mp4">
         	</video>
+            -->
 
 		</div>
 	</div>
